# project_haze

./: .dockerignore  .env.default  .gitignore  Dockerfile  Modelfile  README.md  docker-compose.yml  pyproject.toml  rav.yaml  requirements.txt  run.sh
http/: products.http
requirements/: dev.txt  main.txt
src/: main.py
src/application/: horizon.py  predict.py  registry.py  report.py  users.py
src/application/authentication/: dependency_injection.py
src/application/foxtail/: __init__.py  constants.py  ingest.py  privateGPT.py
src/application/models/: __init__.py  colorful_util.py  models.py  pipeline.py  pipeline_utils.py
src/celery/: __init__.py  app.py  worker.py
src/config/: __init__.py
src/domain/authentication/: entities.py
src/domain/health/: repository.py
src/domain/horizon/: aggregates.py  entities.py  repository.py
src/domain/models/: __init__.py  aggregates.py  entities.py  repository.py
src/domain/predict/: __init__.py  aggregates.py  entities.py  repository.py
src/domain/products/: repository.py
src/domain/registry/: __init__.py  aggregates.py  entities.py  repository.py
src/domain/report/: aggregates.py  entities.py  repository.py
src/domain/users/: entities.py  repository.py
src/domain/users/tests/: factories.py
src/infrastructure/application/entities/: base.py
src/infrastructure/application/errors/: entities.py
src/infrastructure/database/: tables.py
src/infrastructure/database/migrations/versions/: 16691923f98f_.py  833cc9f4c978_.py  be897e38c115_.py  d707773c774a_.py
src/infrastructure/database/services/: repository.py  transactions.py
src/presentation/: __init__.py
src/presentation/authentication/: contracts.py  rest.py
src/presentation/health/: contracts.py  rest.py
src/presentation/horizon/: contracts.py  rest.py
src/presentation/models/: contracts.py  rest.py
src/presentation/orders/: contracts.py  rest.py
src/presentation/predict/: contracts.py  rest.py
src/presentation/products/: contracts.py  rest.py
src/presentation/registry/: contracts.py  rest.py
src/presentation/report/: __init__.py  contracts.py  rest.py
src/presentation/users/: __init__.py  contracts.py  rest.py
